--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <md-card>
+    <md-card-subtitle>Fantastique carte</md-card-subtitle>
+    <md-card-title>La date du jour !</md-card-title>
+    <md-card-content>
+      <p>{{ title }}</p>
+    </md-card-content>
+  </md-card>
+</div>
