feat(code): add logo to show how to handle assets

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <md-card>
     <md-card-subtitle>Fantastique carte</md-card-subtitle>
     <md-card-title>La date du jour !</md-card-title>
+    <img md-card-image src="assets/logo.jpg">
     <md-card-content>
       <p>{{ title }}</p>
     </md-card-content>
